[project]
name = "leetcode"
description = "Python solutions for LeetCode"
version = "0.0.1"
dependencies = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]
requires-python = ">=3.11"

[tool.ruff]
line-length = 160

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 160
