[project]
name = "leetcode"
description = "Python solutions for LeetCode"
version = "0.0.1"
dependencies = [
    "mypy>=1.16.1",
    "ruff>=0.12.3",
    "click>=8.1.7",
    "httpx>=0.25.0",
]
requires-python = ">=3.11"

[tool.uv]
package = false
managed = true

[tool.ruff]
line-length = 160

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["E741"]

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
